# GTFS-blocks-to-transfers

./: .flake8  .gitignore  LICENSE  README.md  convert.py  dependency_info.py  manual_install.py  pyproject.toml  setup.py  upload.sh
.github/workflows/: pull-request.yml  python-publish.yml  release.yml
blocks_to_transfers/: __init__.py  __main__.py  augment.py  block_converter.py  classify_transfers.py  config.py  convert.py  convert_blocks.py  cut.py  expand_dag.py  insert_transfers.py  invariant_transfers.py  junk_tests.py  linear_exporter.py  logs.py  processing.py  runtime_config.py  service_days.py  set_pickup_drop_off.py  shape_similarity.py  simplify_export.py  simplify_fix.py  simplify_graph.py  simplify_linear.py  specific_rules.py  standard_exporter.py
blocks_to_transfers/editor/: __init__.py  schema.py  schema_classes.py  types.py
tests/: test_runner.py  test_spec_example.py
tests/base/: agency.txt  calendar.txt  routes.txt  stops.txt
tests/block_alternate_routing/: calendar.txt  trips.txt
tests/expected_trip_in_several_blocks/: transfers.txt  trips.txt
tests/test_alternative_routing/: README.md
tests/test_competing_continuations_on_same_day/: README.md
tests/test_couple_decouple/: README.md
tests/test_full_loops/: README.md
tests/test_greedy_wait_time/: README.md
tests/test_half_loops/: README.md
tests/test_hausdorff_kcm_125/: README.md
tests/test_merge_blocks_transfers/: README.md
tests/test_merge_sources/: README.md
tests/test_no_original_blocks/: README.md
tests/test_simple_cycle/: README.md
tools/: upload.sh
(+72 files in other folders)
